FIX: Remove black bg from code, fix pre overflow
Remove awful black background when using code syntax.
Fix some "pre" content that overflows it's parent without creating scroll bar.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -62,6 +62,7 @@ hr {
 pre {
   background: black;
   padding: 1em;
+  overflow-x: auto; /* Fix pre content overflowing parent without scroll bar */
 }
 
 table { width: 100%; }
@@ -74,7 +75,7 @@ table, th, td {
 
 code {
   color: white;
-  background: black;
+/*background: black; <-- Remove awful black background for code text*/
   font-size: 80%;
   padding: 0.1em 0.2em;
   font-size: 90%;
